--- a/backend/package.json
+++ b/backend/package.json
@@ -16,5 +16,9 @@
   "homepage": "https://github.com/lucaswilliameufrasio/matematica-clean#readme",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.11.2",
+    "typescript": "^4.0.3"
   }
 }
