--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,13 @@
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "eslint": "^7.10.0",
+    "eslint-config-standard-with-typescript": "^19.0.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "typescript": "^4.0.3"
   }
 }
