--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "lint-staged": "^10.4.0",
     "typescript": "^4.0.3"
   }
 }
