--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.14",
     "@types/node": "^14.11.2",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "eslint": "^7.10.0",
@@ -28,7 +29,9 @@
     "eslint-plugin-standard": "^4.0.1",
     "git-commit-msg-linter": "^3.0.0",
     "husky": "^4.3.0",
+    "jest": "^26.4.2",
     "lint-staged": "^10.4.0",
+    "ts-jest": "^26.4.1",
     "typescript": "^4.0.3"
   }
 }
