--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
   },
   "homepage": "https://github.com/lucaswilliameufrasio/matematica-clean#readme",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --runInBand --watch"
   },
   "devDependencies": {
     "@types/jest": "^26.0.14",
