--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
-    "test:unit": "yarn test --watch -c jest-unit-config.js"
+    "test:unit": "yarn test --watch -c jest-unit-config.js",
+    "test:staged": "yarn test --findRelatedTests"
   },
   "devDependencies": {
     "@types/jest": "^26.0.14",
