--- a/backend/package.json
+++ b/backend/package.json
@@ -17,9 +17,9 @@
   "scripts": {
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
-    "test:unit": "npm run test --watch -c jest-unit-config.js",
-    "test:staged": "npm run test --findRelatedTests",
-    "test:ci": "npm run test --coverage"
+    "test:unit": "npm run test -- --watch -c jest-unit-config.js",
+    "test:staged": "npm run test -- --findRelatedTests",
+    "test:ci": "npm run test -- --coverage"
   },
   "devDependencies": {
     "@types/jest": "^26.0.14",
