--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "test:ci": "npm run test -- --coverage"
   },
   "devDependencies": {
+    "@types/faker": "^5.1.6",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.2",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
